# ai-trading-data

./: .gitignore  PRD-V1.md  PROMPT-V1.txt  README.md  READMEV1.md  pyproject.toml  replit.md  replitV1.md
gitdata/: __init__.py  cli.py  fetch.py  process.py
