[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitdata"
version = "1.0.0"
description = "A lightweight Python package to fetch and consolidate CSV data from public GitHub repositories by ticker symbols"
authors = [
    {name = "Robert Boivin", email = "poivronjaune@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=1.3.0",
    "requests>=2.25.0",
    "click>=8.0.0",
]

[project.scripts]
gitdata = "gitdata.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gitdata*"]

[tool.setuptools.package-data]
gitdata = ["py.typed"]